--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,9 @@
       <!--AchUnit lib-->
       <dependency>
         <groupId>com.tngtech.archunit</groupId>
-        <artifactId>archunit</artifactId>
+        <artifactId>archunit-junit4</artifactId>
         <version>0.23.1</version>
+        <scope>test</scope>
       </dependency>
 
       <!-- Structurizr - document and visualize your architecture -->
